kubernetes/longhorn/components/okd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  labels:
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/version: v1.5.3
    app: longhorn-ui
spec:
  host: ""
  to:
    kind: Service
    name: longhorn-ui
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
